2005-09-29  David Gilbert  <david.gilbert@object-refinery.com>

	* examples/gnu/classpath/examples/swing/ButtonDemo.java
	(createContent): add a close button,
	(actionPerformed): perform close action,
	* examples/gnu/classpath/examples/swing/ComboBoxDemo.java
	(createContent): add a close button,
	(actionPerformed): perform close action.

2005-09-29  Roman Kennke  <kennke@aicas.com>

	* javax/swing/SizeRequirements.java
	(getAlignedSizeRequirements): Fixed calculation of preferred and
	maximum size as well as the alignment.

2005-09-29  Roman Kennke  <kennke@aicas.com>

	Fixes Bug #23851
	* javax/swing/OverlayLayout.java
	(OverlayLayout): Implemented.
	(invalidateLayout): Implemented.
	(addLayoutComponent(Component, Object)): Implemented.
	(addLayoutComponent(String, Component)): Implemented.
	(removeLayoutComponent): Implemented.
	(preferredLayoutSize): Implemented.
	(minimumLayoutSize): Implemented.
	(maximumLayoutSize): Implemented.
	(getLayoutAlignmentX): Implemented.
	(getLayoutAlignmentY): Implemented.
	(layoutContainer): Implemented.
	(checkRequirements): New private helper method.
	(checkTotalRequirements): New private helper method.
	(checkLayout): New private helper method.

2005-09-29  David Gilbert  <david.gilbert@object-refinery.com>

	* examples/gnu/classpath/examples/swing/ComboBoxDemo.java: new demo.

2005-09-29  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* java/awt/print/PrinterJob.java
	(print(PrintRequestAttributeSet)): Remove abstract modifier and
	implement.

2005-09-29  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JPopupMenu.java
	(setVisible): use current size, not preferred size, when checking for
	screen edge,
	* javax/swing/plaf/basic/BasicComboPopup.java
	(show): include top and bottom insets in preferred size,
	* javax/swing/plaf/metal/MetalComboBoxButton.java
	(MetalComboBoxButton): don't pass icon to super class,
	(paintComponent): call super.paintComponent() and reworked label 
	drawing.
